fix contrast

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 
 body {
-    background: #c1c1c1;
+    background: #fefefe;
     width: 60%;
     margin: auto;
     color: black;
